--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 	</header>
 
 	<main>
-		<div class="images">
-			<img src="img/img1.jpg" alt="">
-			<img src="img/img2.jpg" alt="">
-			<img src="img/img3.jpg" alt="">
-			<img src="img/img4.jpg" alt="">
+		<div class="banner">
+			<img class="images" src="img/img1.jpg" alt="makeup">
+			<img class="images" src="img/img2.jpg" alt="makeup">
+			<img class="images" src="img/img3.jpg" alt="makeup">
+			<img class="images" src="img/img4.jpg" alt="makeup">
 		</div>
 
 		<form action="">
